--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.17.0",
     "together-ai": "^0.7.0",
     "youtube-transcript": "^1.2.1"
   },
